edition = "2023";

package atividade5.carrental;

option go_package = "github.com/thihxm/hotel-chain/proto/car-rental";

import "base.proto";

service CarRentalService {
    rpc RentCar(base.CreateReservationRequest) returns (base.CreateReservationResponse) {}
}
